<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1000 Wallpapers</string>
    <string name="appbar_back">Back to menu</string>
    <string name="appbar_search">Search</string>
    <string name="appbar_search_hint">Enter image tags</string>
    <string name="appbar_about">About</string>
    <string name="dialog_about_title">1000 Wallpapers</string>
    <string name="dialog_about_message">helps you find your favorite wallpaper by searching on Flickr.\n\nUse the search function to find images and set them as your new wallpaper.\n\nCopyright 2013 by Marcus Schiesser.</string>
	<string name="dialog_button_ok">OK</string>
    <string name="error_loading_image">Error loading an image</string>
    <string name="error_calling_flickr">Error connecting Flickr</string>
    <string name="error_init_cache">Error initializing disk cache</string>
    <string name="error_wallpaper">Cannot set wallpaper</string>
    <string name="image_view_content_description">Fullscreen image</string>
    <string name="image_view_button_set_wallpaper">Set as Wallpaper</string>
    <string name="image_view_wallpaper_changed">Wallpaper successfully changed.</string>
    
    <string name="admob_id">a15138293532245</string>
    	
</resources>