<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
  <com.google.ads.AdView
        xmlns:googleads="http://schemas.android.com/apk/lib/com.google.ads"
        android:id="@+id/ad"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        googleads:adSize="BANNER"
        googleads:adUnitId="@string/admob_id" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_view_content_description" >

    </ImageView>

    <Button
        android:id="@+id/setWallpaperButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_view_button_set_wallpaper" />

</LinearLayout>