<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutStateMenu"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageButton
            android:id="@+id/searchButton"
            style="@style/ImageButtonLayout"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/appbar_search"
            android:src="@android:drawable/ic_menu_search" />

        <ImageButton
            android:id="@+id/aboutButton"
            style="@style/ImageButtonLayout"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/appbar_about"
            android:src="@android:drawable/ic_menu_help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutStateSearch"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/backButton"
            style="@style/ImageButtonLayout"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:contentDescription="@string/appbar_back"
            android:src="@android:drawable/ic_menu_revert" />

        <EditText
            android:id="@+id/searchText"
            style="@style/EditTextLayout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:hint="@string/appbar_search_hint"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <ProgressBar
            android:id="@+id/appbar_search_progressBar"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp" />
    </LinearLayout>

</LinearLayout>